tests/core/invalid/type-mismatch/input.core
(core 0
  (types (enum example::Unit (ctor example::Unit::Unit)))
  (defs (def example::main Int (con example::Unit::Unit))))
